--- a/trunk/configs/boards/PSG1218/kernel-3.4.x.config
+++ b/trunk/configs/boards/PSG1218/kernel-3.4.x.config
@@ -1546,7 +1546,7 @@ CONFIG_MT76X2_AP_APCLI=y
 # CONFIG_MT76X2_AP_IDS is not set
 # CONFIG_MT76X2_AP_DLS is not set
 CONFIG_MT76X2_AP_80211AC_VHT=y
-CONFIG_MT76X2_AP_TXBF_SUPPORT=y
+# CONFIG_MT76X2_AP_TXBF_SUPPORT is not set
 # CONFIG_MT76X2_AP_INTERNAL_PA_INTERNAL_LNA is not set
 # CONFIG_MT76X2_AP_INTERNAL_PA_EXTERNAL_LNA is not set
 CONFIG_MT76X2_AP_EXTERNAL_PA_EXTERNAL_LNA=y
