ssr: using shared libs instead of static link

--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -34,6 +34,9 @@ LIBS_INCLUDE_MEDIA=n
 LIBS_INCLUDE_CURL=n
 LIBS_INCLUDE_NCURSES=n
 LIBS_INCLUDE_LIBPCRE=n
+LIBS_INCLUDE_LIBEV=n
+LIBS_INCLUDE_LIBSODIUM=n
+LIBS_INCLUDE_LIBUDNS=n
 LIBS_INCLUDE_LIBXML2=n
 LIBS_INCLUDE_MBEDTLS=n
 STORAGE_ENABLED=n
@@ -73,6 +76,9 @@ LIBS_INCLUDE_LIBWEBSOCKETS=y
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS),y)
 LIBS_INCLUDE_LIBPCRE=y
+LIBS_INCLUDE_LIBEV=y
+LIBS_INCLUDE_LIBSODIUM=y
+LIBS_INCLUDE_LIBUDNS=y
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS_MBEDTLS),y)
 LIBS_INCLUDE_MBEDTLS=y
 else
@@ -165,6 +171,9 @@ dir_$(LIBS_INCLUDE_LIBUSB_1)			+= libusb-1.0
 dir_$(LIBS_INCLUDE_LIBJSON_C)			+= libjson-c
 dir_$(LIBS_INCLUDE_LIBWEBSOCKETS)		+= libwebsockets
 dir_$(LIBS_INCLUDE_LIBPCRE)			+= libpcre
+dir_$(LIBS_INCLUDE_LIBEV)			+= libev
+dir_$(LIBS_INCLUDE_LIBSODIUM)			+= libsodium
+dir_$(LIBS_INCLUDE_LIBUDNS)			+= libudns
 dir_$(LIBS_INCLUDE_CURL)			+= libcurl
 dir_y						+= libnfnetlink
 
