--- a/trunk/configs/templates/WR1200JS.config
+++ b/trunk/configs/templates/WR1200JS.config
@@ -24,9 +24,6 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 ### Enable MT7621 CPU sleep mode (downclock to 220MHz on idle)
 #CONFIG_FIRMWARE_CPU_SLEEP=y
 
-### Select 256MB RAM (hardware mod)
-#CONFIG_FIRMWARE_RAM_MOD_256=y
-
 ### Kernel driver select for WiFi AP 2.4GHz
 ### 4.1 = MT7603E v4.1.0.0
 CONFIG_FIRMWARE_WIFI2_DRIVER=4.1
@@ -42,7 +39,7 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 CONFIG_FIRMWARE_ENABLE_USB=y
 
 ### Enable NTFS filesystem support via Paragon "ufsd" driver. ~0.4MB
-CONFIG_FIRMWARE_ENABLE_UFSD=y
+CONFIG_FIRMWARE_ENABLE_UFSD=n
 
 ### Enable FAT/FAT32 filesystem support. ~0.1MB
 CONFIG_FIRMWARE_ENABLE_FAT=y
@@ -51,67 +48,64 @@ CONFIG_FIRMWARE_ENABLE_FAT=y
 CONFIG_FIRMWARE_ENABLE_EXFAT=y
 
 ### Enable EXT2 filesystem support. ~0.1MB
-#CONFIG_FIRMWARE_ENABLE_EXT2=y
+CONFIG_FIRMWARE_ENABLE_EXT2=y
 
 ### Enable EXT3 filesystem support. ~0.2MB
-#CONFIG_FIRMWARE_ENABLE_EXT3=y
+CONFIG_FIRMWARE_ENABLE_EXT3=y
 
 ### Enable EXT4 (EXT3/2 too) filesystem support. ~0.4MB
 CONFIG_FIRMWARE_ENABLE_EXT4=y
 
 ### Enable XFS filesystem support. ~0.6MB
-#CONFIG_FIRMWARE_ENABLE_XFS=y
+CONFIG_FIRMWARE_ENABLE_XFS=n
 
 ### Enable FUSE (filesystems in userspace) support. ~0.1MB
 CONFIG_FIRMWARE_ENABLE_FUSE=y
 
 ### Enable swap files/partitions support. ~0.05MB
-CONFIG_FIRMWARE_ENABLE_SWAP=y
+CONFIG_FIRMWARE_ENABLE_SWAP=n
 
 ### Include UVC camera modules. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_UVC=y
 
 ### Include USB-HID modules. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_HID=y
+CONFIG_FIRMWARE_INCLUDE_HID=n
 
 ### Include USB-Serial modules (e.g. pl2303). ~0.03MB
 CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 
 ### Include USB-Audio modules ~0.46MB
-#CONFIG_FIRMWARE_INCLUDE_AUDIO=y
-
-### Include XFRM (IPsec) modules & iptables extension ~ 0.2MB
-#CONFIG_FIRMWARE_INCLUDE_XFRM=y
+CONFIG_FIRMWARE_INCLUDE_AUDIO=y
 
 ### Include network QoS scheduling modules. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_QOS=y
+CONFIG_FIRMWARE_INCLUDE_QOS=n
 
 ### Include IMQ module for shapers (a bit of performance degradation). ~0.02MB
-#CONFIG_FIRMWARE_INCLUDE_IMQ=y
+CONFIG_FIRMWARE_INCLUDE_IMQ=n
 
 ### Include IFB module for shapers. ~0.03MB
-#CONFIG_FIRMWARE_INCLUDE_IFB=y
+CONFIG_FIRMWARE_INCLUDE_IFB=n
 
 ### Include IPSet utility and kernel modules. ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_IPSET=y
 
 ### Include NFSv3 server. ~0.6MB
-CONFIG_FIRMWARE_INCLUDE_NFSD=y
+CONFIG_FIRMWARE_INCLUDE_NFSD=n
 
 ### Include NFSv3 client. ~0.5MB
-CONFIG_FIRMWARE_INCLUDE_NFSC=y
+CONFIG_FIRMWARE_INCLUDE_NFSC=n
 
 ### Include CIFS (SMB) client. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_CIFS=y
+CONFIG_FIRMWARE_INCLUDE_CIFS=n
 
 ############################################################
 ### Userspace configuration
 ############################################################
 
 ### Include WebUI international resources. Increased firmware size
+CONFIG_FIRMWARE_INCLUDE_LANG_CN=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_BR=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_CZ=y
-CONFIG_FIRMWARE_INCLUDE_LANG_CN=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_DA=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_DE=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_ES=y
@@ -124,10 +118,10 @@ CONFIG_FIRMWARE_INCLUDE_LANG_CN=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_UK=y
 
 ### Include NTFS-3G FUSE driver (instead of Paragon "ufsd"). ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
+CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
 
 ### Include LPR printer daemon. ~0.12MB
-CONFIG_FIRMWARE_INCLUDE_LPRD=y
+CONFIG_FIRMWARE_INCLUDE_LPRD=n
 
 ### Include USB-over-Ethernet printer daemon. ~0.05MB
 CONFIG_FIRMWARE_INCLUDE_U2EC=y
@@ -136,58 +130,55 @@ CONFIG_FIRMWARE_INCLUDE_U2EC=y
 CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 
 ### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_HDPARM=y
+CONFIG_FIRMWARE_INCLUDE_HDPARM=n
 
 ### Include "parted" utility (allow make GPT partitions). ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_PARTED=y
+CONFIG_FIRMWARE_INCLUDE_PARTED=n
 
 ### Include SMB (and WINS) server. ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_SMBD=y
 
 ### Include WINS server only. ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_WINS=y
+CONFIG_FIRMWARE_INCLUDE_WINS=n
 
 ### Include syslog for SMB and WINS server. ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
+CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=n
 
 ### Include FTP server. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_FTPD=n
+CONFIG_FIRMWARE_INCLUDE_FTPD=y
 
 ### Include alternative L2TP control client RP-L2TP. ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_RPL2TP=y
+CONFIG_FIRMWARE_INCLUDE_RPL2TP=n
 
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
-CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
+CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=n
 
 ### Include HTTPS support for DDNS client. openssl ~1.2MB
-CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=y
+CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=n
 
 ### Include HTTPS support. openssl ~1.2MB
-CONFIG_FIRMWARE_INCLUDE_HTTPS=y
+CONFIG_FIRMWARE_INCLUDE_HTTPS=n
 
 ### Include sftp-server. openssl ~1.2MB, sftp-server ~0.06MB
 CONFIG_FIRMWARE_INCLUDE_SFTP=y
 
 ### Include dropbear SSH. ~0.3MB
-#CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
+CONFIG_FIRMWARE_INCLUDE_DROPBEAR=n
 
 ### Make the dropbear symmetrical ciphers and hashes faster. ~0.06MB
-CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
+CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=n
 
 ### Include OpenSSH instead of dropbear. openssl ~1.2MB, openssh ~1.0MB
 CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
-
-### Include StrongSwan. XFRM modules ~0.2MB, strongswan ~0.7MB
-#CONFIG_FIRMWARE_INCLUDE_SSWAN=y
+CONFIG_FIRMWARE_INCLUDE_OPENVPN=n
 
 ### Include Elliptic Curves (EC) to openssl library. ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
+CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=n
 
 ### Include "openssl" executable for generate certificates. ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
+CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=n
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_XUPNPD=n
@@ -199,28 +190,31 @@ CONFIG_FIRMWARE_INCLUDE_MINIDLNA=n
 CONFIG_FIRMWARE_INCLUDE_FIREFLY=n
 
 ### Include ffmpeg 0.11.x instead of 0.6.x for Minidlna and Firefly. ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
+CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=n
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
-#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=n
+CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=n
 
 ### Include Transmission-Web-Control (advanced WebUI). ~0.8MB
-#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=
+CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=n
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
-#CONFIG_FIRMWARE_INCLUDE_ARIA=y
+CONFIG_FIRMWARE_INCLUDE_ARIA=y
+
+### Include Aria2 new version instead of old version (prebuild by gcc 4.9.4)
+CONFIG_FIRMWARE_INCLUDE_ARIA2_NEW_PREBUILD_BIN=y
 
 ### Include Aria2 WEB control. ~0.7MB
-#CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y                                                                                              
+CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
 
-CONFIG_FIRMWARE_INCLUDE_SCUT_MOD=n
+CONFIG_FIRMWARE_INCLUDE_SCUT_MOD=y
 
 ### require libwebsocket,libjson-c
-CONFIG_FIRMWARE_INCLUDE_TTYD=n
+CONFIG_FIRMWARE_INCLUDE_TTYD=y
 
-CONFIG_FIRMWARE_INCLUDE_VLMCSD=n
+CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
 
-CONFIG_FIRMWARE_INCLUDE_NAPT66=n
+CONFIG_FIRMWARE_INCLUDE_NAPT66=y
 
 CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=y
 
@@ -234,7 +228,7 @@ CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS_MBEDTLS=n
 
 CONFIG_FIRMWARE_INCLUDE_CURL=y
 
-CONFIG_FIRMWARE_INCLUDE_LRZSZ=n
+CONFIG_FIRMWARE_INCLUDE_LRZSZ=y
 
 ### require libncurses
 CONFIG_FIRMWARE_INCLUDE_HTOP=y
@@ -252,4 +246,4 @@ CONFIG_FIRMWARE_INCLUDE_DNSMASQ_CHINA_CONF=y
 
 CONFIG_FIRMWARE_INCLUDE_MINIEAP=y
 
-CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT=n
+CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT=y
