add softethervpn client

--- a/trunk/configs/templates/WR1200JS.config
+++ b/trunk/configs/templates/WR1200JS.config
@@ -247,3 +247,7 @@ CONFIG_FIRMWARE_INCLUDE_DNSMASQ_CHINA_CONF=y
 CONFIG_FIRMWARE_INCLUDE_MINIEAP=y
 
 CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT=y
+
+CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT=n
+
+CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD=n
