--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -39,6 +39,7 @@ LIBS_INCLUDE_LIBSODIUM=n
 LIBS_INCLUDE_LIBUDNS=n
 LIBS_INCLUDE_LIBXML2=n
 LIBS_INCLUDE_MBEDTLS=n
+LIBS_INCLUDE_READLINE=n
 STORAGE_ENABLED=n
 
 ifdef CONFIG_MMC_BLOCK
@@ -161,6 +162,20 @@ LIBS_INCLUDE_LIBSSL=y
 LIBS_INCLUDE_LIBPCAP=y
 endif
 
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT),y)
+LIBS_INCLUDE_READLINE=y
+LIBS_INCLUDE_LIBSSL=y
+LIBS_INCLUDE_LIBICONV=y
+LIBS_INCLUDE_NCURSES=y
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD),y)
+LIBS_INCLUDE_READLINE=y
+LIBS_INCLUDE_LIBSSL=y
+LIBS_INCLUDE_LIBICONV=y
+LIBS_INCLUDE_NCURSES=y
+endif
+
 dir_y						+= libz
 dir_$(LIBS_INCLUDE_NCURSES)			+= libncurses
 dir_$(LIBS_INCLUDE_LIBLZO)			+= liblzo
@@ -199,6 +214,8 @@ dir_$(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION)	+= libevent
 dir_$(LIBS_INCLUDE_LIBXML2)		+= libxml2
 
 dir_$(LIBS_INCLUDE_MBEDTLS)		+= mbedtls
+
+dir_$(LIBS_INCLUDE_READLINE)		+= readline
 
 all:
 	for i in $(dir_y) ; do \
