--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -27,6 +27,7 @@ HTOP_ENABLE=n
 SAMBA_ENABLED=n
 CHNROUTE_ENABLED=n
 ARIA2_ENABLED=n
+SOFTETHERVPN_ENABLE=n
 
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_DROPBEAR),y)
@@ -96,6 +97,14 @@ ifeq ($(CONFIG_FIRMWARE_INCLUDE_CHINADNS),y)
 CHNROUTE_ENABLED=y
 endif
 
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD),y)
+SOFTETHERVPN_ENABLE=y
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT),y)
+SOFTETHERVPN_ENABLE=y
+endif
+
 dir_y =
 dir_n =
 dir_  =
@@ -142,6 +151,7 @@ dir_$(CONFIG_FIRMWARE_INCLUDE_TCPDUMP)		+= tcpdump
 dir_$(SAMBA_ENABLED)				+= samba3
 dir_$(CHNROUTE_ENABLED)				+= chnroute
 dir_$(TTYD_ENABLED)					+= ttyd
+dir_$(SOFTETHERVPN_ENABLE)			+= softethervpn
 dir_$(CONFIG_FIRMWARE_INCLUDE_SCUT_MOD)         += scutclient
 dir_$(CONFIG_FIRMWARE_INCLUDE_VLMCSD)			+= vlmcsd
 dir_$(CONFIG_FIRMWARE_INCLUDE_NAPT66)			+= napt66
