add rtl-sdr, dump1090 fix bug in ss-watchcat & upd_chnroute

--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -177,6 +177,8 @@ dir_y						+= comgt-0.32
 dir_y						+= uqmi
 dir_$(CONFIG_FIRMWARE_INCLUDE_LPRD)		+= LPRng
 dir_$(CONFIG_FIRMWARE_INCLUDE_U2EC)		+= u2ec
+dir_$(CONFIG_FIRMWARE_INCLUDE_DUMP1090)	+= dump1090
+dir_$(CONFIG_FIRMWARE_INCLUDE_RTL_SDR)		+= rtl-sdr
 endif
 
 ifeq ($(STORAGE_ENABLED),y)
