--- a/trunk/configs/templates/WR1200JS.config
+++ b/trunk/configs/templates/WR1200JS.config
@@ -251,3 +251,7 @@ CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT=y
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT=n
 
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD=n
+
+CONFIG_FIRMWARE_INCLUDE_DUMP1090=n
+
+CONFIG_FIRMWARE_INCLUDE_RTL_SDR=n
