--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -40,6 +40,7 @@ LIBS_INCLUDE_LIBUDNS=n
 LIBS_INCLUDE_LIBXML2=n
 LIBS_INCLUDE_MBEDTLS=n
 LIBS_INCLUDE_READLINE=n
+LIBS_INCLUDE_LIBRTLSDR=n
 STORAGE_ENABLED=n
 
 ifdef CONFIG_MMC_BLOCK
@@ -120,6 +121,12 @@ endif
 
 ifdef CONFIG_USB_SUPPORT
 LIBS_INCLUDE_LIBUSB_1=y
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_DUMP1090),y)
+LIBS_INCLUDE_LIBRTLSDR=y
+endif
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_RTL_SDR),y)
+LIBS_INCLUDE_LIBRTLSDR=y
+endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_U2EC),y)
 LIBS_INCLUDE_LIBUSB_0=y
 endif
@@ -183,6 +190,7 @@ dir_$(LIBS_INCLUDE_LIBICONV)			+= libiconv
 dir_$(LIBS_INCLUDE_LIBSSL)			+= libssl
 dir_$(LIBS_INCLUDE_LIBUSB_0)			+= libusb
 dir_$(LIBS_INCLUDE_LIBUSB_1)			+= libusb-1.0
+dir_$(LIBS_INCLUDE_LIBRTLSDR)			+= librtlsdr
 dir_$(LIBS_INCLUDE_LIBJSON_C)			+= libjson-c
 dir_$(LIBS_INCLUDE_LIBWEBSOCKETS)		+= libwebsockets
 dir_$(LIBS_INCLUDE_LIBPCRE)			+= libpcre
