update README.md mbedtls: bump to 2.7.4 fix travis-ci build error

--- a/trunk/libs/librtlsdr/Makefile
+++ b/trunk/libs/librtlsdr/Makefile
@@ -24,7 +24,7 @@ config_test:
 configure:
 	( cd $(SRC_NAME) ; \
 	autoreconf -fi ; \
-	./configure \
+	PKG_CONFIG_LIBDIR="$(STAGEDIR)/lib/pkgconfig/" ./configure \
 		--prefix=$(STAGEDIR) \
 		--host=$(HOST_TARGET) \
 		--build=$(HOST_BUILD) ; \
