fix travis-ci rtl-sdr build error

--- a/trunk/user/rtl-sdr/Makefile
+++ b/trunk/user/rtl-sdr/Makefile
@@ -25,7 +25,7 @@ config_test:
 configure:
 	( cd $(SRC_NAME) ; \
 	autoreconf -fi ; \
-	./configure \
+	PKG_CONFIG_LIBDIR="$(STAGEDIR)/lib/pkgconfig/" ./configure \
 		--disable-shared \
 		--enable-static \
 		--prefix=/usr \
