--- a/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
+++ b/trunk/configs/boards/WR1200JS/kernel-3.4.x.config
@@ -589,7 +589,7 @@ CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
 # CONFIG_NETFILTER_XT_MATCH_ETHPORT is not set
-CONFIG_IP_SET=y
+CONFIG_IP_SET=m
 CONFIG_IP_SET_MAX=256
 CONFIG_IP_SET_BITMAP_IP=m
 CONFIG_IP_SET_BITMAP_IPMAC=m
