--- a/trunk/user/napt66/napt66-v1.1/Makefile
+++ b/trunk/user/napt66/napt66-v1.1/Makefile
@@ -1,11 +1,11 @@
 PWD  := $(shell pwd)
-KDIR := ../../../$(CONFIG_LINUXDIR)
+KDIR := $(ROOTDIR)/$(CONFIG_LINUXDIR)
 
 obj-m := napt66.o
 napt66-objs := napt66_main.o napt66_conntrack.o napt66_nat.o napt66_hash_table.o napt66_ftp_alg.o
 
 all:
-	$(MAKE) -C $(KDIR) M=$(PWD) modules ARCH=mips CROSS_COMPILE=$(CONFIG_CROSS_COMPILER_ROOT)/bin/mipsel-linux-uclibc-
-
+	$(MAKEARCH_KERNEL) -C $(KDIR) M=$(PWD) modules
+	
 clean:
 	rm -rf .*.cmd *.o *.mod.c *.ko .tmp_versions *.symvers *.order
