--- a/trunk/user/ttyd/Makefile
+++ b/trunk/user/ttyd/Makefile
@@ -4,7 +4,7 @@ SRC_URL=https://github.com/tsl0922/ttyd/archive/1.4.2.tar.gz
 THISDIR = $(shell pwd)
 
 all: download_test extract_test config_test
-	$(MAKE) -C $(SRC_NAME)
+	$(MAKE) -C $(SRC_NAME)/build
 
 download_test:
 	( if [ ! -f $(THISDIR)/$(SRC_NAME).tar.gz ]; then \
@@ -24,22 +24,14 @@ config_test:
 	fi )
 
 configure:
-	( cd $(SRC_NAME) ; \
-	cmake \
-	-DCMAKE_INSTALL_PREFIX=$(STAGEDIR) \
-	-DCMAKE_TOOLCHAIN_FILE=../cross-mipsel-linux.cmake \
-	. \
+	( mkdir -p $(SRC_NAME)/build && cd $(SRC_NAME)/build ; \
+	cmake -DCMAKE_TOOLCHAIN_FILE=../../cross-mipsel-linux.cmake .. \
 	)
 
 clean:
-	if [ -f $(SRC_NAME)/Makefile ] ; then \
-		$(MAKE) -C $(SRC_NAME) clean ; \
-	fi ; \
+	rm -rf $(SRC_NAME)/build
 	rm -f config_done
 
-install:
-	$(MAKE) -C $(SRC_NAME) install DESTDIR=""
-
 romfs:
-	$(ROMFSINST) $(THISDIR)/$(SRC_NAME)/ttyd /usr/bin/ttyd
+	$(ROMFSINST) $(THISDIR)/$(SRC_NAME)/build/ttyd /usr/bin/ttyd
 	$(ROMFSINST) $(THISDIR)/ttyd.sh /usr/bin/ttyd.sh
