adapted to MI-3(nand flash)

--- a/trunk/configs/templates/MI-3.config
+++ b/trunk/configs/templates/MI-3.config
@@ -3,7 +3,7 @@ CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=MT7620
 
 ### Target ProductID (board select, max 12 symbols)
-CONFIG_FIRMWARE_PRODUCT_ID="MI-MINI"
+CONFIG_FIRMWARE_PRODUCT_ID="MI-3"
 
 ### Linux kernel and toolchain 
 CONFIG_LINUXDIR=linux-3.4.x
@@ -32,7 +32,7 @@ CONFIG_FIRMWARE_WIFI5_DRIVER=3.0
 ### 2.4 = RT3092 v2.4.0.5
 ### 2.5 = RT3092 v2.5.0.11
 ### 2.7 = RT3092 v2.7.1.5
-CONFIG_FIRMWARE_WIFI2_DRIVER=3.0
+CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
