--- a/trunk/configs/boards/5K-W20/kernel-3.4.x.config
+++ b/trunk/configs/boards/5K-W20/kernel-3.4.x.config
@@ -66,7 +66,7 @@ CONFIG_MT7620_ASIC=y
 CONFIG_RT2880_DRAM_64M=y
 # CONFIG_RT2880_DRAM_128M is not set
 # CONFIG_RT2880_DRAM_256M is not set
-CONFIG_RALINK_RAM_SIZE=128
+CONFIG_RALINK_RAM_SIZE=64
 # CONFIG_RT2880_UART_57600 is not set
 CONFIG_RT2880_UART_115200=y
 CONFIG_RALINK_UART_BRATE=115200
@@ -476,7 +476,6 @@ CONFIG_NETFILTER_XTABLES=y
 #
 CONFIG_NETFILTER_XT_MARK=y
 CONFIG_NETFILTER_XT_CONNMARK=y
-# CONFIG_NETFILTER_XT_SET is not set
 
 #
 # Xtables targets
@@ -546,19 +545,7 @@ CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
 # CONFIG_NETFILTER_XT_MATCH_ETHPORT is not set
-CONFIG_IP_SET=m
-CONFIG_IP_SET_MAX=256
-CONFIG_IP_SET_BITMAP_IP=m
-CONFIG_IP_SET_BITMAP_IPMAC=m
-CONFIG_IP_SET_BITMAP_PORT=m
-CONFIG_IP_SET_HASH_IP=m
-CONFIG_IP_SET_HASH_IPPORT=m
-CONFIG_IP_SET_HASH_IPPORTIP=m
-CONFIG_IP_SET_HASH_IPPORTNET=m
-CONFIG_IP_SET_HASH_NET=m
-CONFIG_IP_SET_HASH_NETPORT=m
-CONFIG_IP_SET_HASH_NETIFACE=m
-CONFIG_IP_SET_LIST_SET=m
+# CONFIG_IP_SET is not set
 # CONFIG_IP_VS is not set
 
 #
