--- a/trunk/configs/boards/MI-3/kernel-3.4.x.config
+++ b/trunk/configs/boards/MI-3/kernel-3.4.x.config
@@ -1969,7 +1969,7 @@ CONFIG_RT_READ_MAC_FROM_MTD=y
 #
 # CONFIG_RA_NAT_NONE is not set
 CONFIG_RA_NAT_HW=y
-CONFIG_RA_HW_NAT=y
+CONFIG_RA_HW_NAT=m
 CONFIG_HNAT_V2=y
 CONFIG_RA_HW_NAT_LAN_VLANID=1
 CONFIG_RA_HW_NAT_WAN_VLANID=2
