--- a/trunk/configs/templates/WR1200JS.config
+++ b/trunk/configs/templates/WR1200JS.config
@@ -77,6 +77,9 @@ CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 ### Include USB-Audio modules ~0.46MB
 CONFIG_FIRMWARE_INCLUDE_AUDIO=y
 
+### Include XFRM (IPsec) modules & iptables extension ~ 0.2MB
+#CONFIG_FIRMWARE_INCLUDE_XFRM=y
+
 ### Include network QoS scheduling modules. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_QOS=n
 
@@ -173,6 +176,9 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENVPN=n
+
+### Include StrongSwan. XFRM modules ~0.2MB, strongswan ~0.7MB
+#CONFIG_FIRMWARE_INCLUDE_SSWAN=y
 
 ### Include Elliptic Curves (EC) to openssl library. ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=n
