--- a/trunk/configs/templates/5K-W20.config
+++ b/trunk/configs/templates/5K-W20.config
@@ -19,10 +19,10 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 #CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
 
 ### Force MT7620 CPU clock to 600MHz (override Uboot settings)
-CONFIG_FIRMWARE_CPU_600MHZ=n
+#CONFIG_FIRMWARE_CPU_600MHZ=y
 
 ### Enable MT7620 CPU sleep mode (downclock to 200MHz on idle)
-CONFIG_FIRMWARE_CPU_SLEEP=n
+#CONFIG_FIRMWARE_CPU_SLEEP=y
 
 ### Kernel driver select for WiFi AP 2.4GHz
 ### 2.7 = MT7620 v2.7.2.0
@@ -148,7 +148,7 @@ CONFIG_FIRMWARE_INCLUDE_FTPD=y
 CONFIG_FIRMWARE_INCLUDE_RPL2TP=n
 
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
-CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=n
+CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
 
 ### Include HTTPS support for DDNS client. openssl ~1.2MB
 CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=n
