--- a/trunk/configs/templates/MI-3.config
+++ b/trunk/configs/templates/MI-3.config
@@ -1,11 +1,11 @@
-### Target Vendor/Product (support only Ralink RT3883/MT7620)
+### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621/MT7628)
 CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=MT7620
 
 ### Target ProductID (board select, max 12 symbols)
 CONFIG_FIRMWARE_PRODUCT_ID="MI-3"
 
-### Linux kernel and toolchain 
+### Linux kernel and toolchain
 CONFIG_LINUXDIR=linux-3.4.x
 CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 
@@ -19,20 +19,19 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 #CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
 
 ### Force MT7620 CPU clock to 600MHz (override Uboot settings)
-#CONFIG_FIRMWARE_CPU_600MHZ=n
+#CONFIG_FIRMWARE_CPU_600MHZ=y
 
 ### Enable MT7620 CPU sleep mode (downclock to 200MHz on idle)
 #CONFIG_FIRMWARE_CPU_SLEEP=y
 
+### Kernel driver select for WiFi AP 2.4GHz
+### 2.7 = MT7620 v2.7.2.0
+### 3.0 = MT7620 v3.0.4.0
+CONFIG_FIRMWARE_WIFI2_DRIVER=3.0
+
 ### Kernel driver select for WiFi AP 5GHz
 ### 3.0 = MT7612E v3.0.4.0
 CONFIG_FIRMWARE_WIFI5_DRIVER=3.0
-
-### Kernel driver select for WiFi AP 2.4GHz
-### 2.4 = RT3092 v2.4.0.5
-### 2.5 = RT3092 v2.5.0.11
-### 2.7 = RT3092 v2.7.1.5
-CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
@@ -123,7 +122,7 @@ CONFIG_FIRMWARE_INCLUDE_LANG_CN=y
 CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
 
 ### Include LPR printer daemon. ~0.12MB
-CONFIG_FIRMWARE_INCLUDE_LPRD=n
+CONFIG_FIRMWARE_INCLUDE_LPRD=y
 
 ### Include USB-over-Ethernet printer daemon. ~0.05MB
 CONFIG_FIRMWARE_INCLUDE_U2EC=y
@@ -153,7 +152,7 @@ CONFIG_FIRMWARE_INCLUDE_FTPD=y
 CONFIG_FIRMWARE_INCLUDE_RPL2TP=n
 
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
-CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=n
+CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
 
 ### Include HTTPS support for DDNS client. openssl ~1.2MB
 CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=n
