--- a/trunk/configs/boards/OYE-001/kernel-3.4.x.config
+++ b/trunk/configs/boards/OYE-001/kernel-3.4.x.config
@@ -534,8 +534,8 @@ CONFIG_NETFILTER_XT_MATCH_PHYSDEV=m
 # CONFIG_NETFILTER_XT_MATCH_RATEEST is not set
 # CONFIG_NETFILTER_XT_MATCH_REALM is not set
 CONFIG_NETFILTER_XT_MATCH_RECENT=y
-CONFIG_NETFILTER_XT_MATCH_SCTP=y
-CONFIG_NETFILTER_XT_MATCH_SOCKET=m
+# CONFIG_NETFILTER_XT_MATCH_SCTP is not set
+# CONFIG_NETFILTER_XT_MATCH_SOCKET is not set
 CONFIG_NETFILTER_XT_MATCH_STATE=y
 # CONFIG_NETFILTER_XT_MATCH_LAYER7 is not set
 # CONFIG_NETFILTER_XT_MATCH_STATISTIC is not set
@@ -985,7 +985,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
 CONFIG_RALINK_GPIO=y
-CONFIG_RALINK_GPIOMODE_EPHY=y
+# CONFIG_RALINK_GPIOMODE_EPHY is not set
 # CONFIG_RALINK_GPIOMODE_MDIO is not set
 CONFIG_RALINK_GPIOMODE_PA_G=y
 CONFIG_RALINK_GPIOMODE_UARTF=y
@@ -1452,7 +1452,12 @@ CONFIG_FUSE_FS=m
 #
 # Caches
 #
-# CONFIG_FSCACHE is not set
+CONFIG_FSCACHE=m
+CONFIG_FSCACHE_STATS=y
+# CONFIG_FSCACHE_HISTOGRAM is not set
+# CONFIG_FSCACHE_DEBUG is not set
+# CONFIG_FSCACHE_OBJECT_LIST is not set
+# CONFIG_CACHEFILES is not set
 
 #
 # CD-ROM/DVD Filesystems
@@ -1787,10 +1792,10 @@ CONFIG_RAETH_ESW_CONTROL=y
 CONFIG_RAETH_ESW_IGMP_SNOOP_SW=y
 # CONFIG_RAETH_ESW_IGMP_SNOOP_HW is not set
 CONFIG_RAETH_ESW_PORT_WAN=4
-CONFIG_RAETH_ESW_PORT_LAN1=1
-CONFIG_RAETH_ESW_PORT_LAN2=2
-CONFIG_RAETH_ESW_PORT_LAN3=3
-CONFIG_RAETH_ESW_PORT_LAN4=0
+CONFIG_RAETH_ESW_PORT_LAN1=0
+CONFIG_RAETH_ESW_PORT_LAN2=1
+CONFIG_RAETH_ESW_PORT_LAN3=2
+CONFIG_RAETH_ESW_PORT_LAN4=3
 # CONFIG_RAETH_SNMPD is not set
 CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # CONFIG_RAETH_MEMORY_OPTIMIZATION is not set
