--- a/trunk/configs/templates/K2P.config
+++ b/trunk/configs/templates/K2P.config
@@ -80,6 +80,9 @@ CONFIG_FIRMWARE_INCLUDE_SERIAL=n
 ### Include USB-Audio modules ~0.46MB
 CONFIG_FIRMWARE_INCLUDE_AUDIO=n
 
+### Include XFRM (IPsec) modules & iptables extension ~ 0.2MB
+CONFIG_FIRMWARE_INCLUDE_XFRM=n
+
 ### Include network QoS scheduling modules. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_QOS=n
 
@@ -176,6 +179,9 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENVPN=n
+
+### Include StrongSwan. XFRM modules ~0.2MB, strongswan ~0.7MB
+CONFIG_FIRMWARE_INCLUDE_SSWAN=n
 
 ### Include Elliptic Curves (EC) to openssl library. ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=n
