--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ compiler:
     - gcc
 
 install:
-    - sudo /opt/rt-n56u/trunk/tools/travis_ci_build_trig.sh
+    - sudo bash ./trunk/tools/travis_ci_build_trig.sh
     - sudo apt-get update -qq
     - sudo apt-get install -qq zip autoconf automake bison build-essential flex gawk gettext gperf libtool pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev texinfo python-docutils libncurses5-dev autopoint curl
 
